{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 293,
  "lineage": "1218a2df-5b70-56ae-2126-c216dbedd552",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0044130ca185d0880",
            "arn": "arn:aws:ec2:us-east-1:068591307351:instance/i-0614b56577a2e1cd9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance20230505215009528300000003",
            "id": "i-0614b56577a2e1cd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eddffa574d194d9e",
            "private_dns": "ip-172-31-6-47.ec2.internal",
            "private_ip": "172.31.6.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00989ed351494dd31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd2278d2e00d84ee",
            "tags": {
              "Environment": "dev",
              "Name": "nomad-client-0",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nomad-client-0",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9caa6cae3441905"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance",
            "aws_iam_role.instance",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0044130ca185d0880",
            "arn": "arn:aws:ec2:us-east-1:068591307351:instance/i-0cc90f89c7499fc52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance20230505215009528300000003",
            "id": "i-0cc90f89c7499fc52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ed4c312c68e37ea",
            "private_dns": "ip-172-31-4-4.ec2.internal",
            "private_ip": "172.31.4.4",
            "public_dns": "ec2-35-171-133-14.compute-1.amazonaws.com",
            "public_ip": "35.171.133.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d91f3667e04e3f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd2278d2e00d84ee",
            "tags": {
              "Environment": "dev",
              "Name": "nomad-client-1",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nomad-client-1",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9caa6cae3441905"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0044130ca185d0880",
            "arn": "arn:aws:ec2:us-east-1:068591307351:instance/i-0fc1b715de0c10a19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance20230505215009528300000003",
            "id": "i-0fc1b715de0c10a19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080ea9f31033e6628",
            "private_dns": "ip-172-31-7-129.ec2.internal",
            "private_ip": "172.31.7.129",
            "public_dns": "ec2-3-235-108-221.compute-1.amazonaws.com",
            "public_ip": "3.235.108.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0848b51d2ed032bee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd2278d2e00d84ee",
            "tags": {
              "Environment": "dev",
              "Name": "nomad-proxy-0",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nomad-proxy-0",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-client",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9caa6cae3441905"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance",
            "aws_iam_role.instance",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0044130ca185d0880",
            "arn": "arn:aws:ec2:us-east-1:068591307351:instance/i-0d6501c53eb599fea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance20230505215009528300000003",
            "id": "i-0d6501c53eb599fea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8bec67e5c39bdc9",
            "private_dns": "ip-172-31-0-62.ec2.internal",
            "private_ip": "172.31.0.62",
            "public_dns": "ec2-3-235-19-5.compute-1.amazonaws.com",
            "public_ip": "3.235.19.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f61f755c6fd820d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd2278d2e00d84ee",
            "tags": {
              "Environment": "dev",
              "Name": "nomad-server-1",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-server",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nomad-server-1",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Role": "nomad-server",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9caa6cae3441905"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance",
            "aws_iam_role.instance",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sandbox_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:security-group/sg-09d0bc32cc255e3fe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0bc32cc255e3fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nwales-sandbox-server20230505183403015000000006",
            "name_prefix": "nwales-sandbox-server",
            "owner_id": "068591307351",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0508dd6385c0c041e",
            "association_id": "eipassoc-0e3ab8bfd14229111",
            "domain": "vpc",
            "id": "eipalloc-0508dd6385c0c041e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07cdb044423caf50d",
            "private_dns": "ip-10-0-101-181.ec2.internal",
            "private_ip": "10.0.101.181",
            "public_dns": "ec2-44-194-222-238.compute-1.amazonaws.com",
            "public_ip": "44.194.222.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06425fea7bc3485a7",
            "association_id": "eipassoc-0cc1159ee43979f91",
            "domain": "vpc",
            "id": "eipalloc-06425fea7bc3485a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03bafedf0a761c4bb",
            "private_dns": "ip-10-0-102-168.ec2.internal",
            "private_ip": "10.0.102.168",
            "public_dns": "ec2-3-234-120-80.compute-1.amazonaws.com",
            "public_ip": "3.234.120.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a4a0a9d034b3e36",
            "association_id": "eipassoc-09d9416cd77bb341f",
            "domain": "vpc",
            "id": "eipalloc-01a4a0a9d034b3e36",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf47c81a4246da45",
            "private_dns": "ip-10-0-103-245.ec2.internal",
            "private_ip": "10.0.103.245",
            "public_dns": "ec2-54-167-195-241.compute-1.amazonaws.com",
            "public_ip": "54.167.195.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:internet-gateway/igw-0181b8ad00841b6dd",
            "id": "igw-0181b8ad00841b6dd",
            "owner_id": "068591307351",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0508dd6385c0c041e",
            "connectivity_type": "public",
            "id": "nat-0132ecda2c3e2a14e",
            "network_interface_id": "eni-07cdb044423caf50d",
            "private_ip": "10.0.101.181",
            "public_ip": "44.194.222.238",
            "subnet_id": "subnet-00426eba78a76e1c9",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06425fea7bc3485a7",
            "connectivity_type": "public",
            "id": "nat-03a85b2e06a5a11a3",
            "network_interface_id": "eni-03bafedf0a761c4bb",
            "private_ip": "10.0.102.168",
            "public_ip": "3.234.120.80",
            "subnet_id": "subnet-0f35be34d702cbb37",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a4a0a9d034b3e36",
            "connectivity_type": "public",
            "id": "nat-0999ce58aa43382ee",
            "network_interface_id": "eni-0cf47c81a4246da45",
            "private_ip": "10.0.103.245",
            "public_ip": "54.167.195.241",
            "subnet_id": "subnet-046301b1bbc987b63",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4320801a786ade41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0132ecda2c3e2a14e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4320801a786ade4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ea73a2e54689c96a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03a85b2e06a5a11a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea73a2e54689c96a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01dab6a62db4fbacf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0999ce58aa43382ee",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01dab6a62db4fbacf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0181b8ad00841b6dd",
            "id": "r-rtb-0706ab6d3c4cb91791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0706ab6d3c4cb9179",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:route-table/rtb-0d4320801a786ade4",
            "id": "rtb-0d4320801a786ade4",
            "owner_id": "068591307351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0132ecda2c3e2a14e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:route-table/rtb-0ea73a2e54689c96a",
            "id": "rtb-0ea73a2e54689c96a",
            "owner_id": "068591307351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a85b2e06a5a11a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:route-table/rtb-01dab6a62db4fbacf",
            "id": "rtb-01dab6a62db4fbacf",
            "owner_id": "068591307351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0999ce58aa43382ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:route-table/rtb-0706ab6d3c4cb9179",
            "id": "rtb-0706ab6d3c4cb9179",
            "owner_id": "068591307351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0181b8ad00841b6dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "timeouts": null,
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b49e7897cf846b5",
            "route_table_id": "rtb-0d4320801a786ade4",
            "subnet_id": "subnet-0b2d24fa05cdc5fe6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940098610e943675",
            "route_table_id": "rtb-0ea73a2e54689c96a",
            "subnet_id": "subnet-03889f3dc85cf0086"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a0db43594f776d4",
            "route_table_id": "rtb-01dab6a62db4fbacf",
            "subnet_id": "subnet-0c2694a3d7f5a8dcb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ded2054657acd48e",
            "route_table_id": "rtb-0706ab6d3c4cb9179",
            "subnet_id": "subnet-00426eba78a76e1c9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04978315fced74a28",
            "route_table_id": "rtb-0706ab6d3c4cb9179",
            "subnet_id": "subnet-0f35be34d702cbb37"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044a5243942b60d98",
            "route_table_id": "rtb-0706ab6d3c4cb9179",
            "subnet_id": "subnet-046301b1bbc987b63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-0b2d24fa05cdc5fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2d24fa05cdc5fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-03889f3dc85cf0086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03889f3dc85cf0086",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-0c2694a3d7f5a8dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2694a3d7f5a8dcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-00426eba78a76e1c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00426eba78a76e1c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-0f35be34d702cbb37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f35be34d702cbb37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:subnet/subnet-046301b1bbc987b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046301b1bbc987b63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068591307351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "vpc_id": "vpc-020e87d10d4c06be6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068591307351:vpc/vpc-020e87d10d4c06be6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00691ce9111268171",
            "default_route_table_id": "rtb-0ad241f8ad05f8dba",
            "default_security_group_id": "sg-02236da3283e139f2",
            "dhcp_options_id": "dopt-0a5fe97a53e3ea623",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-020e87d10d4c06be6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad241f8ad05f8dba",
            "owner_id": "068591307351",
            "tags": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nwales-sandbox",
              "Owner": "nwales",
              "Purpose": "Sandbox Testing",
              "Terraform": "true",
              "hc-internet-facing": "true",
              "se_region": "AMER",
              "ttl": "72"
            }
          }
        }
      ]
    }
  ]
}